do I need to commit this?

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MASTER_LOGIN = master@jem.com.br
 MASTER_PASSWORD = 12345678
 
 CLIENT_URL = https://jem-web.netlify.app/
-CLIENT_LOGIN = esteralvim@gmail.com
-CLIENT_PASSWORD = Mestres1701$
+CLIENT_LOGIN = emailtesteauto1@gmail.com
+CLIENT_PASSWORD = Ab!12345
